# bvh11

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml
bvh11/: Channel.hpp  Joint.hpp  bvh11.hpp
demos/simple_demo/: CMakeLists.txt  main.cpp
demos/visual_demo/: CMakeLists.txt  Widget.cpp  Widget.hpp  main.cpp
include/: bvh11.hpp
include/bvh11/: Channel.hpp  Joint.hpp  bvh11.hpp  internal_functions.hpp
resources/: 131_01.bvh  131_02.bvh  README.md  sample.bvh  scaled_131_01.bvh  scaled_131_02.bvh  scaled_131_03.bvh
src/: bvh11.cpp
